correcting overflow image issue

--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ h4 {
 }
 
 .emilyimage {
-  padding: 60px;
-  margin: 20px, 0px, 20px, 20px;
+  display: inline-block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .subtext {
